# pipeboard

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  run_project.sh
.github/workflows/: docker-ci.yml
core/ports/: __init__.py
core/schemas/: __init__.py  activity_field_schema.py  activity_schema.py  activity_type_schema.py  currency_schema.py  deal_fields_schema.py  deal_schema.py  deal_stage_history_schema.py  files_schema.py  filter_schema.py  lead_label_schema.py  lead_schema.py  organization_fields_schema.py  organization_schema.py  person_fields_schema.py  person_schema.py  pipeline_schema.py  shared_schema.py  stage_schema.py  user_schema.py
core/services/: sync_service.py
core/utils/: __init__.py  column_utils.py  schema_utils.py
docker/: Dockerfile.orion  Dockerfile.setup  docker-compose.yml  prometheus.yml
docker/scripts/: entrypoint-orion.sh  entrypoint-setup.sh  wait-for-it.sh
docker/utils/: __init__.py  blocks_and_deployments.py  create_or_update_core_blocks.py
docs/grafana/: grafana_dashboard.json
infrastructure/: __init__.py
infrastructure/clients/: __init__.py  pipedrive_api_client.py
infrastructure/config/: settings.py
infrastructure/db/: __init__.py  postgres_adapter.py
infrastructure/observability/: __init__.py  metrics.py  server.py
infrastructure/redis/: redis_cache.py
infrastructure/repositories/: __init__.py  board_repository.py  dependent_entities.py  enrich_with_lookups.py  lookups.py  repository_base.py  repository_stage_history.py
orchestration/common/: __init__.py  compute_updated_since.py  (+5 more)
(+55 files in other folders)
